--- a/wb_intercon.conf
+++ b/wb_intercon.conf
@@ -1,5 +1,5 @@
 [master spi_master]
-slaves = reg_csr reg_ver reg_err adc_spi i2c_clk coef_array reg_array ped_array adc_rcv reg_array1
+slaves = reg_csr reg_ver reg_err adc_spi i2c_clk reg_array ped_array adc_rcv
 
 [slave reg_csr]
 datawidth=32
@@ -26,11 +26,6 @@ datawidth=32
 offset=0x20
 size=0x20
 
-[slave coef_array]
-datawidth=32
-offset=0x40
-size=0x40
-
 [slave reg_array]
 datawidth=32
 offset=0x80
@@ -45,8 +40,3 @@ size=0x40
 datawidth=32
 offset=0x100
 size=0x100
-
-[slave reg_array1]
-datawidth=32
-offset=0x200
-size=0x40
